--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -29,6 +29,10 @@ jobs:
         distribution: 'temurin'
         java-version: '21'
 
+    # This adds automatic caching for gradle so it doesn't need to download dependencies every time
+    - name: Setup Gradle
+      uses: gradle/actions/setup-gradle@v4
+
     # Grant execute permission for gradlew
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
